fix: A11y contrast level

--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -14,6 +14,6 @@ $primary-color: #800000;
   --font-color: white;
   --primary-color: #ff3636;
   --button-text: #171717;
-  --odd-bg-color: #212121;
+  --odd-bg-color: #202020;
   --hover-bg-color: #141414;
 }
